Fix button alignment

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -51,6 +51,10 @@
     margin-top: 20px;
   }
 
+  .v-panel-content-wikiPanel {
+    min-height:200px;
+  }
+
   .v-verticallayout-wikiEntryInformationContent {
     padding:10px 10px 10px 10px;
   }
